--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - .:/srv/node:rw,cached
     ports:
       - 3000:3000
-    command: /bin/sh -c 'npm install && npm run build && npm run watch'
+    command: /bin/sh -c 'npm install && npm run watch'
   
