--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/explicit-member-accessibility": ["error"],
+    "@typescript-eslint/no-empty-function": ["error", { "allow": ["methods"] }],
     "no-template-curly-in-string": "error",
     "space-before-function-paren": [
       "error",
