Comment out eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
     "block-scoped-var": "error",
     "default-case": ["error"],
     "default-param-last": ["error"],
-    "guard-for-in": ["error"],
+    // "guard-for-in": ["error"],
     "max-classes-per-file": ["error", 1],
     "no-caller": ["error"],
     "no-constructor-return": ["error"],
